force-app/main/default/objects/Finance_Forecast_Line__c/Finance_Forecast_Line__c.object-meta.xml
<CustomObject>
    <description>Finance Center: expected receipts per project per month, rebuilt nightly by FinanceCollectionStateBatch from unpaid Cash_Flow__c remaining amounts (AED). Live lines (Is_Frozen = false) are deleted and recreated every run. On the first run of each month a FROZEN copy of that month is created and never rebuilt - forecast-vs-actual variance compares the frozen line against actual receipts, and Slippage_Reason__c is edited on frozen lines.</description>
    <label>Finance Forecast Line</label>
    <nameField>
        <displayFormat>FFL-{000000}</displayFormat>
        <label>Forecast Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Forecast Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>