force-app/main/default/objects/Finance_Forecast_Line__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <description>AED. Unpaid cash-flow remaining scheduled in this month for this project, converted at rebuild time.</description>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>