force-app/main/default/objects/Finance_Forecast_Line__c/fields/Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month__c</fullName>
    <description>First day of the forecast month.</description>
    <label>Forecast Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>