force-app/main/default/objects/Finance_Forecast_Line__c/fields/Is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Is_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True = the month-start snapshot of the forecast for this month. Never rebuilt; used for forecast-vs-actual variance.</description>
    <label>Is Frozen</label>
    <type>Checkbox</type>
</CustomField>