force-app/main/default/objects/Finance_Forecast_Line__c/fields/Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ProjectId|YYYY-MM|LIVE or ProjectId|YYYY-MM|FROZEN. Upsert/idempotency key.</description>
    <externalId>true</externalId>
    <label>Line Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>