force-app/main/default/objects/Finance_Forecast_Line__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Finance Forecast Lines</relationshipLabel>
    <relationshipName>Finance_Forecast_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>