force-app/main/default/objects/Finance_Forecast_Line__c/fields/Slippage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Slippage_Reason__c</fullName>
    <description>Manual note explaining forecast-vs-actual variance. Only meaningful on frozen lines.</description>
    <label>Slippage Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>